# sahjhan

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
docs/design/: 2026-03-25-sahjhan-enforcement-engine-design.md  2026-03-25-sahjhan-engine.md
examples/horizons1/: events.toml  protocol.toml  renders.toml  states.toml  transitions.toml
examples/minimal/: events.toml  hooks.toml  protocol.toml  renders.toml  states.toml  transitions.toml
output/: HISTORY.md  STATUS.md
output/.sahjhan/: ledger.jsonl  ledgers.toml  manifest.json
src/: lib.rs  main.rs  mermaid.rs
src/cli/: aliases.rs  authed_event.rs  commands.rs  config_cmd.rs  daemon_cmd.rs  guards.rs  hooks_cmd.rs  init.rs  ledger.rs  log.rs  manifest_cmd.rs  mermaid.rs  mod.rs  output.rs  query.rs  render.rs  sign_cmd.rs  status.rs  transition.rs  vault_cmd.rs  verify_cmd.rs
src/config/: events.rs  hooks.rs  mod.rs  protocol.rs  renders.rs  states.rs  transitions.rs  vault_policy.rs
src/daemon/: auth.rs  mod.rs  platform.rs  protocol.rs  vault.rs
src/gates/: command.rs  evaluator.rs  file.rs  ledger.rs  mod.rs  query.rs  snapshot.rs  template.rs  types.rs
src/hooks/: eval.rs  generate.rs  mod.rs
src/ledger/: chain.rs  entry.rs  genesis.rs  import.rs  mod.rs  registry.rs
src/manifest/: mod.rs  tracker.rs  verify.rs
src/query/: mod.rs
src/render/: engine.rs  (+1 more)
tests/: active_ledger_tests.rs  auth_tests.rs  chain_integrity_tests.rs  checkpoint_tests.rs  concurrent_append_tests.rs  config_integrity_tests.rs  config_tests.rs  daemon_auth_tests.rs  daemon_enforcement_tests.rs  daemon_platform_tests.rs  daemon_protocol_tests.rs  daemon_record_event_tests.rs  daemon_signing_tests.rs  daemon_vault_e2e_tests.rs  daemon_vault_tests.rs  gate_tests.rs  hook_eval_tests.rs  hook_generation_tests.rs  horizons1_tests.rs  import_tests.rs  integration_tests.rs  json_output_tests.rs  ledger_tests.rs  manifest_tests.rs  mermaid_tests.rs  query_tests.rs  registry_tests.rs  render_filter_tests.rs  state_machine_tests.rs  template_security_tests.rs  template_tests.rs  vault_policy_tests.rs
(+39 files in other folders)
