[package]
name = "sahjhan"
version = "0.1.1"
edition = "2021"
description = "Protocol enforcement engine for AI agents"
license = "MIT"
repository = "https://github.com/jbrjake/sahjhan"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
sha2 = "0.10"
rmp-serde = "1"
datafusion = "51"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
glob = "0.3"
hex = "0.4"
tera = "1"
getrandom = "0.2"
fs2 = "0.4"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
regex = "1"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
