[package]
name = "sahjhan"
version = "0.13.1"
edition = "2021"
description = "Protocol enforcement engine for AI agents"
license = "MIT"
repository = "https://github.com/jbrjake/sahjhan"

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
datafusion = "51"
fs2 = "0.4"
getrandom = "0.2"
glob = "0.3"
hex = "0.4"
hmac = "0.12"
libc = "0.2"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
subtle = "2"
tera = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
toml = "0.8"
zeroize = { version = "1", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
